<resources>
    <string name="app_name">Zazo</string>
    <string name="rec">REC</string>
    <string name="enter_code_dlg_msg">We sent a code via text message\nto %1$s.</string>
    <string name="enter_code_dlg_helper">Enter Code</string>
    <string name="enter_code_dlg_button_call"><u>Call Me Instead</u></string>
    <string name="enter_code_dlg_button_calling">Calling you...</string>
    <string name="enter_code_dlg_hint">Code</string>
    <string name="dialog_action_quit">Quit</string>
    <string name="dialog_action_try_again">Try Again</string>
    <string name="dialog_action_cancel">Cancel</string>
    <string name="dialog_action_ok">OK</string>
    <string name="dialog_action_send_anyway">Send anyway</string>
    <string name="dialog_action_invite">Invite</string>
    <string name="dialog_action_enter">Enter</string>
    <string name="dialog_action_update">Update</string>
    <string name="dialog_action_later">Later</string>
    <string name="dialog_checking_title">Checking…</string>
    <string name="dialog_verifying_title">Verifying…</string>
    <string name="dialog_syncing_title">Syncing…</string>
    <string name="dialog_deleting_title">Deleting…</string>
    <string name="dialog_bad_connection_title">Bad Connection</string>
    <string name="dialog_bad_connection_message">Trouble downloading. Check your connection</string>
    <string name="dialog_camera_exception_no_camera_title">No Camera</string>
    <string name="dialog_camera_exception_no_camera_message">Your device does not seem to have a camera. This app requires a camera.</string>
    <string name="dialog_camera_exception_no_front_camera_title">No Front Camera</string>
    <string name="dialog_camera_exception_no_front_camera_message">Your device does not seem to have a front facing camera. This app requires a front facing camera.</string>
    <string name="dialog_camera_exception_camera_in_use_title">Camera in Use</string>
    <string name="dialog_camera_exception_camera_in_use_message">Your camera seems to be in use by another application. Please close that app and try again. You may also need to restart your device.</string>
    <string name="dialog_camera_exception_unable_to_set_params_title">Unable to set params</string>
    <string name="dialog_camera_exception_unable_to_set_params_message">Something wrong with device camera. Please close that app and try again.</string>
    <string name="dialog_camera_exception_unable_to_find_appropriate_video_size_title">Unable to find appropriate video size</string>
    <string name="dialog_camera_exception_unable_to_find_appropriate_video_size_message">Your camera does not seem to support appropriate video size. Please close that app or try again.</string>
    <string name="dialog_record_title">Hold to Record</string>
    <string name="dialog_record_message">Press and hold the RECORD button to record.</string>
    <string name="dialog_no_valid_phones_title">No Mobile Number</string>
    <string name="dialog_no_valid_phones_message">I could not find a valid mobile number for %1$s.\n\nPlease add a mobile number for %2$s in your device contacts and try again.</string>
    <string name="dialog_register_phone_error_title">Bad Number</string>
    <string name="dialog_register_phone_error_message">Enter your country code (+1 for USA) and mobile number.</string>
    <string name="dialog_register_last_name_error_title">Last Name</string>
    <string name="dialog_register_last_name_error_message">Enter your last name.</string>
    <string name="dialog_register_first_name_title">First Name</string>
    <string name="dialog_register_first_name_message">Enter your first name.</string>
    <string name="dialog_server_error_title">No Connection</string>
    <string name="dialog_server_error_message">Can\'t reach %1$s.\n\nCheck your connection and try again.</string>
    <string name="dialog_register_bad_code_title">Bad Code</string>
    <string name="dialog_register_bad_code_message">The code you entered is wrong. Please try again.</string>
    <string name="dialog_send_sms_failure_title">Didn\'t Send Invitation</string>
    <string name="dialog_send_sms_failure_message">It looks like you can\'t or didn\'t send an invitation link. Perhaps you can just call or email %1$s and tell them about %2$s.</string>
    <string name="dialog_select_phone_number">Mobile Phone?</string>
    <string name="dialog_invite_sms_title">Send Link</string>
    <string name="dialog_invite_sms_message">%1$s, I sent you a quick video message on %2$s. I use it pretty often. To see my message download Zazo from the app store or here: %3$s%4$s. Yes, it\'s legit/safe to install. -%5$s</string>
    <string name="dialog_invite_sms_no_user_message">I sent you a quick video message on %1$s. I use it pretty often. To see my message download Zazo from the app store or here: %2$s. Yes, it\'s legit/safe to install</string>
    <string name="dialog_invite_sms_action">Send</string>
    <string name="dialog_invite_send_through_sms">Send as SMS</string>
    <string name="dialog_invite_send_through_other">Send via…</string>
    <string name="dialog_invite_send_through_other_selected">Send via %1$s</string>
    <string name="dialog_hint_title">Hint</string>
    <string name="dialog_play_hint_message">Tap a friend to play</string>
    <string name="dialog_record_hint_message">Press and hold a friend to record</string>
    <string name="dialog_already_connected_title">Send a Zazo</string>
    <string name="dialog_already_connected_message">It seems that %1$s is already connected with you.\n\nRecord %2$s to %3$s now.</string>
    <string name="dialog_nudge_friend_title">Nudge %1$s</string>
    <string name="dialog_nudge_friend_message">%1$s still hasn\'t installed %2$s.\n\nDo you want to send a link to invite again?</string>
    <string name="dialog_invite_friend_title">Invite %1$s?</string>
    <string name="dialog_invite_friend_message">%1$s  has not installed %2$s.\n\nDo you want to send a link to invite?</string>
    <string name="dialog_update_title">Update Available</string>
    <string name="dialog_update_obsolete_message">Your %1$s app is obsolete. It must be updated for use.</string>
    <string name="dialog_update_out_of_date_message">Your %1$s app is out of date. Please update.</string>
    <string name="dialog_enter_text_hint">Enter text</string>
    <string name="dialog_not_supported_chat_title">Do not send message?</string>
    <string name="dialog_not_supported_chat_message">It seems that %1$s doesn\'t have the latest Zazo version and won\'t be able to receive your message</string>
    <string name="dialog_use_last_frame">Use last frame of Zazo</string>
    <string name="dialog_use_profile_photo">Use profile photo</string>
    <string name="dialog_thumbnail_when_sending_zazo">Thumbnail when sending a Zazo:</string>
    <string name="toast_downloading">Downloading…</string>
    <string name="toast_not_sent">Not sent</string>
    <string name="toast_unable_to_set_preview">Unable to set preview</string>
    <string name="toast_unable_to_prepare_media_recorder">Unable to prepare MediaRecorder</string>
    <string name="toast_recording_aborted_wrong_state">Recording Aborted due to Release before Stop</string>
    <string name="toast_too_short">Too short</string>
    <string name="toast_illegal_media_recorder_state">Illegal state of MediaRecorder. Try to restart app</string>
    <string name="toast_unable_to_start_recording">Unable to start recording. Try again</string>
    <string name="toast_dragged_finger_away">Dragged finger away</string>
    <string name="toast_gesture_cancelled">Gesture cancelled by controller</string>
    <string name="toast_two_finger_touch">Two Finger Touch</string>
    <string name="toast_could_not_get_audio_focus">Could not get audio focus. Probably you are in call</string>
    <string name="toast_could_not_sync">Could not sync</string>
    <string name="toast_camera_is_switching">Please wait. Camera is not ready yet</string>
    <string name="toast_already_added">Friend is already connected with you</string>
    <string name="toast_no_connection">No connection. Message will be sent later</string>
    <string name="toast_input_is_empty">Enter something…</string>
    <string name="toast_could_not_load_photo">Could not load photo</string>
    <string name="recording">Recording</string>
    <string name="register_first_name">Your First Name</string>
    <string name="register_last_name">Last Name</string>
    <string name="register_mobile_number">Mobile Number</string>
    <string name="register_sign_in">Sign In</string>
    <string name="video_is_not_playable">Video is not playable</string>
    <string name="search_all_contacts_hint">Search</string>
    <string name="tutorial_hint_invite_1">Send a Zazo</string>
    <string-array name="tutorial_hint_invite_2">
        <item>Unlock a secret feature\nJust Zazo someone else!</item>
        <item>A gift is waiting\nJust Zazo someone else!</item>
        <item>Win a surprise\nJust Zazo someone else!</item>
        <item>Surprise feature waiting\nJust Zazo someone else!</item>
    </string-array>
    <string name="tutorial_hint_play">Tap to play</string>
    <string name="tutorial_hint_play_record">Press and hold to record\nTap to play</string>
    <string name="tutorial_hint_record">Press and hold to record</string>
    <string name="tutorial_hint_sent">Zazo sent! Well done!</string>
    <string name="tutorial_hint_viewed">Your Zazo was Viewed!</string>
    <string name="tutorial_hint_send_welcome">Record a welcome Zazo for %1$s.</string>
    <string name="tutorial_hint_send_welcome_with_record">Press and hold to record a welcome Zazo for %1$s.</string>
    <string name="tutorial_got_it">Got It</string>
    <string name="tutorial_try_it">Try it now</string>
    <string name="invite_subject">Invitation to Zazo</string>
    <string name="no_app_selected">No app selected</string>
    <string name="no_supported_app_available">No applications available</string>
    <string name="action_view">View</string>
    <string name="action_dismiss">Dismiss</string>
    <string name="action_undo">Undo</string>
    <string name="action_got_it">Got it</string>
    <string name="action_subscribe">Subscribe</string>
    <string name="action_done">Done</string>
    <string name="action_add_joined_friend">Invite</string>
    <string name="action_ignore_joined_friend">Skip</string>
    <string name="action_unsubscribe">Unsubscribe</string>
    <string name="action_text_reply">Text</string>
    <string name="action_zazo_reply">Zazo</string>
    <plurals name="notification_title">
        <item quantity="one">%d new Zazo</item>
        <item quantity="other">%d new Zazos</item>
    </plurals>
    <string name="notification_list_more">%d more</string>
    <string name="notification_from">From %1$s!</string>
    <string name="action_show_me">Show Me</string>
    <string name="hurray_message">Hurray,</string>
    <string name="feature_unlock_message">You unlocked a new feature!</string>
    <string name="feature_unlock_discover_message">Discover what it is</string>
    <string-array name="unlock_another_feature">
        <item>Unlock another feature!</item>
        <item>Unlock a secret feature!</item>
        <item>A gift is waiting!</item>
        <item>Win a surprise!</item>
        <item>Surprise feature waiting!</item>
        <item>Get a surprise!</item>
    </string-array>
    <string name="just_zazo_someone_new">Just Zazo someone new!</string>
    <string name="navigation_invite_friends">Invite Friends</string>
    <string name="navigation_edit_friends">Edit Zazo Friends</string>
    <string name="navigation_new_group">New Group</string>
    <string name="navigation_contacts">Contacts</string>
    <string name="navigation_settings">Settings</string>
    <string name="navigation_help">Help &amp; Feedback</string>
    <string name="account_title">Profile</string>
    <string name="account_setup_photo">Set profile\nphoto</string>
</resources>