<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/register_bg"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp" >

        <ImageView
            android:id="@+id/app_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/zazo_type_white" />

        <EditText
            android:id="@+id/first_name_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_first_name"
            android:inputType="textCapWords|textPersonName"
            style="@style/RegistrationFieldStyle" >
            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/last_name_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/register_last_name"
            android:inputType="textCapWords|textPersonName"
            style="@style/RegistrationFieldStyle"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <com.zazoapp.client.ui.view.CountryCodeEditText
                    android:id="@+id/country_code_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minEms="3"
                    android:inputType="phone"
                    android:imeOptions="actionNext"
                    android:completionThreshold="1"
                    style="@style/RegistrationFieldStyle" />

                <TextView
                    android:id="@+id/cc_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|center_horizontal"
                    android:text="Country Code"
                    android:textColor="@android:color/white"
                    android:textSize="8sp" />

                <TextView
                        android:id="@+id/usa_hint_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="top|center_horizontal"
                        android:text="(+1 USA)"
                        android:textColor="@android:color/white"
                        android:textSize="8sp" />
            </LinearLayout>

            <EditText
                android:id="@+id/mobile_number_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:hint="@string/register_mobile_number"
                android:inputType="phone"
                android:imeOptions="actionDone"
                style="@style/RegistrationFieldStyle" />
        </LinearLayout>

        <Button
            android:id="@+id/enter_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/register_btn_bg"
            android:layout_marginTop="25dp"
            android:text="@string/register_sign_in"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_very_large" />

        <View
            android:id="@+id/transparent_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"/>

    </LinearLayout>
</ScrollView>