<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/bgn_main"
                android:clickable="true">

    <RelativeLayout
            android:id="@+id/zazo_action_bar"
            style="@style/ZazoActionBar"
            android:clickable="false">

        <RelativeLayout
                android:id="@+id/home"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                >

            <com.balysv.materialmenu.MaterialMenuView
                    android:id="@+id/up"
                    android:layout_width="48dp"
                    android:layout_height="match_parent"
                    android:paddingLeft="@dimen/actionbar_item_padding"
                    android:paddingRight="@dimen/actionbar_item_padding"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:visibility="visible"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"/>
            <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_toRightOf="@id/up"
                    android:layout_toEndOf="@id/up"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true">
                <TextView
                        android:id="@+id/action_bar_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="@dimen/actionbar_item_icon_padding"
                        android:paddingEnd="@dimen/actionbar_item_icon_padding"
                        android:layout_centerVertical="true"
                        android:text="@string/account_title"
                        android:textSize="@dimen/text_very_large"
                        android:textColor="@color/actionbar_textcolor"
                        />
            </RelativeLayout>

        </RelativeLayout>
    </RelativeLayout>
    <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/zazo_action_bar"
            android:alpha="0.25"
            android:background="@drawable/account_background"
            />
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/zazo_action_bar"
            android:paddingLeft="@dimen/content_inset"
            android:paddingRight="@dimen/content_inset">
            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <TextView
                        android:id="@+id/name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/app_name"
                        android:textColor="@color/dialog_textcolor"
                        android:textSize="@dimen/text_xxlarge"
                        android:gravity="center"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="40dp"
                        />
                <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/thumb"
                        android:layout_width="192dp"
                        android:layout_height="192dp"
                        android:src="@drawable/ic_account_circle_white"
                        android:layout_marginBottom="20dp"
                        android:layout_centerHorizontal="true"
                        android:layout_below="@id/name"/>
                <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/thumb_cover"
                        android:layout_width="192dp"
                        android:layout_height="192dp"
                        android:src="@drawable/white_bottom_scrim"
                        android:layout_marginBottom="20dp"
                        android:layout_centerHorizontal="true"
                        android:layout_below="@id/name"/>
                <TextView
                        android:id="@+id/edit_photo"
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:gravity="bottom|center_horizontal"
                        android:layout_alignLeft="@id/thumb"
                        android:layout_alignTop="@id/thumb"
                        android:layout_alignRight="@id/thumb"
                        android:layout_alignBottom="@id/thumb"
                        android:paddingBottom="30dp"
                        android:alpha="@integer/primary_dark_text_alpha"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        android:textColor="@color/primary"
                        android:textAllCaps="true"
                        android:textSize="@dimen/text_normal"
                        android:text="@string/account_setup_photo"/>
                <LinearLayout
                        android:id="@+id/thumbnail_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_below="@id/thumb">
                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/dialog_thumbnail_when_sending_zazo"
                            android:textColor="@color/dialog_textcolor"
                            android:textSize="@dimen/text_normal"/>
                    <RadioGroup
                            android:id="@+id/thumbnail_group"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:paddingTop="10dp"
                            android:paddingLeft="@dimen/content_inset"
                            android:paddingRight="@dimen/content_inset"
                            >
                        <android.support.v7.widget.AppCompatRadioButton
                                android:id="@+id/use_last_frame"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/dialog_use_last_frame"
                                android:textColor="@color/dialog_textcolor"
                                android:textSize="@dimen/text_normal"
                                android:button="@drawable/rbtn_selector"
                                app:buttonTint="@color/primary"
                                />

                        <android.support.v7.widget.AppCompatRadioButton
                                android:id="@+id/use_profile_photo"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/dialog_use_profile_photo"
                                android:textColor="@color/dialog_textcolor"
                                android:textSize="@dimen/text_normal"
                                android:button="@drawable/rbtn_selector"
                                app:buttonTint="@color/primary"
                                />
                    </RadioGroup>
                </LinearLayout>


            </RelativeLayout>
    </ScrollView>

    <View
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/zazo_action_bar"
            android:background="@drawable/toolbar_shadow"/>
</RelativeLayout>